<resources>
    <string name="app_name">Puzzle 15</string>
    <string name="welcome_to_game_of_fifteen">Welcome to Game of FIfteen</string>
    <string name="start_play">START PLAY</string>
    <string name="music">♪ Music</string>
    <string name="start_new_game">Start New Game</string>
    <string name="time_00_00">Time: 00:00</string>
    <string name="move_0000">Move: 0000</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_test">Test</string>
    <string name="play_game">Play Game</string>
    <string name="choose_level">Choose level!</string>
</resources>
