<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#C9A776"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/txvWelcomeID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="30dp"
            android:text="@string/welcome_to_game_of_fifteen"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imgPuzzle15ID"
            android:layout_width="wrap_content"
            android:layout_height="418dp"
            android:layout_gravity="center"
            android:paddingLeft="15dp"
            android:paddingTop="10dp"
            android:paddingRight="15dp"
            android:paddingBottom="10dp"
            app:srcCompat="@drawable/puzzle15" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Switch
                android:id="@+id/swchMusicID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="45dp"
                android:layout_marginLeft="45dp"
                android:switchTextAppearance="@style/TextAppearance.AppCompat.Large"
                android:text="@string/music"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnNewGameID"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center|right|center_vertical"
                android:layout_marginLeft="110dp"
                android:layout_marginRight="45dp"
                android:layout_weight="1"
                android:background="@drawable/button"
                android:gravity="center"
                android:text="@string/play_game"
                android:textColor="@android:color/black"
                android:textSize="12sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>